--- a/semantic-ui/grid/grid.html
+++ b/semantic-ui/grid/grid.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="/theme/bower/semantic/dist/semantic.min.css">
+		<link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
 		<style type="text/css">
 			.ui.grid.collapsed > .column {
 				padding-top: 4px;
@@ -67,34 +67,34 @@
 
 <div class="ui four column grid container">
   <div class="column">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat placeat repudiandae, sequi provident accusamus soluta maxime accusantium ad magnam error.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia veritatis neque aperiam voluptatum harum cumque architecto, saepe accusamus dignissimos aliquid.</p>
+		<p ilorem></p>
+		<p ilorem></p>
   </div>
   <div class="column">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quasi mollitia exercitationem deleniti eos molestias veniam fugit illum perspiciatis nesciunt?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi voluptates nisi corporis, reiciendis qui adipisci aliquid dignissimos officia voluptatibus nesciunt.</p>
+		<p ilorem></p>
+		<p ilorem></p>
   </div>
   <div class="column">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quas tempora rem ducimus dicta eaque mollitia molestias sunt ea dolor.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi doloribus laboriosam, eum illo! Placeat labore vitae cupiditate deleniti modi dolorum?</p>
+		<p ilorem></p>
+		<p ilorem></p>
   </div>
   <div class="column">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi fugit cumque saepe velit eveniet libero numquam itaque tenetur vitae.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure maxime odio numquam corporis qui magni nulla eveniet fugiat atque quidem?</p>
+		<p ilorem></p>
+		<p ilorem></p>
   </div>
 </div>
 		<div class="ui fluid container grid">
 			<div class="four wide column">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro soluta libero voluptatem, alias eos voluptas modi perferendis dolore molestias accusamus officia. Quis minus ipsam harum iusto, quae nemo autem veritatis.</p>
+					<p ilorem></p>
 			</div>
 			<div class="four wide column">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro soluta libero voluptatem, alias eos voluptas modi perferendis dolore molestias accusamus officia. Quis minus ipsam harum iusto, quae nemo autem veritatis.</p>
+					<p ilorem></p>
 			</div>
 			<div class="four wide column">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro soluta libero voluptatem, alias eos voluptas modi perferendis dolore molestias accusamus officia. Quis minus ipsam harum iusto, quae nemo autem veritatis.</p>
+					<p ilorem></p>
 			</div>
 			<div class="four wide column">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro soluta libero voluptatem, alias eos voluptas modi perferendis dolore molestias accusamus officia. Quis minus ipsam harum iusto, quae nemo autem veritatis.</p>
+					<p ilorem></p>
 			</div>
 		</div>
 
@@ -112,7 +112,8 @@
 
 
 
-		<script type="text/javascript" src="/theme/bower/jquery/dist/jquery.js"></script>
-		<script type="text/javascript" src="/theme/bower/semantic/dist/semantic.min.js"></script>
+		<script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="/semantic/dist/semantic.min.js"></script>
+		<script type="text/javascript" src="/node_modules/ilorem/dist/ilorem.js"></script>
 	</body>
 </html>
