--- a/semantic-ui/examples/grid.html
+++ b/semantic-ui/examples/grid.html
@@ -6,7 +6,7 @@
   <style type="text/css">
     article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
   </style>
-  <link rel="stylesheet" type="text/css" href="/theme/bower/semantic/dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
 </head>
 <body>
   <div class="ui grid">
@@ -144,6 +144,6 @@
 </div>
 
   <script type="text/javascript" src="/theme/bower/jquery/dist/jquery.js"></script>
-  <script type="text/javascript" src="/theme/bower/semantic/dist/semantic.min.js"></script>
+  <script type="text/javascript" src="/semantic/dist/semantic.min.js"></script>
 </body>
 </html>
