--- a/semantic-ui/grid/grid1.html
+++ b/semantic-ui/grid/grid1.html
@@ -3,20 +3,20 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/theme/bower/semantic/dist/semantic.min.css">
+	<link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
 </head>
 
 <body>
 	<div class="ui fluid container">
 		<div class="ui grid">
-			<div class="four wide column ct"></div>
-			<div class="four wide column ct"></div>
+			<div class="four wide column" ilorem></div>
+			<div class="four wide column" ilorem></div>
 		</div>
 		<div class="ui grid">
-			<div class="four wide column ct"></div>
-			<div class="four wide column ct"></div>
+			<div class="four wide column" ilorem></div>
+			<div class="four wide column" ilorem></div>
 			<div class="row">
-				<div class="four wide column ct"></div>
+				<div class="four wide column" ilorem></div>
 			</div>
 		</div>
 		<div class="ui grid">
@@ -38,13 +38,8 @@
 			<div class="row"><div class="sixteen wide column" style="background-color: red;">sixteen</div></div>
 		</div>
 	</div>
-	<script type="text/javascript" src="/theme/bower/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="/theme/bower/semantic/dist/semantic.min.js"></script>
-	<script type="text/javascript">
-	$(document).ready(function() {
-		$(".ct").text('Architecto soluta dolorum error voluptatibus facilis, molestiae accusamus provident fugiat odit voluptatem, et, exercitationem voluptate. Dolore iusto magnam provident error officiis pariatur sunt optio alias, libero dolorum, vitae. Aliquid ad eum fuga harum doloribus odit rerum laborum distinctio. Nemo asperiores odit aliquid ipsam aperiam dolor aspernatur deserunt laborum repellat consequatur voluptatem, veritatis animi itaque impedit accusamus, quidem natus nisi, pariatur esse eius, architecto obcaecati quod illo! Delectus porro quasi in veniam quam. Maiores non soluta doloremque suscipit. Ratione ab, neque. Assumenda, nisi, cum. Eligendi quas, rem mollitia molestias rerum earum adipisci repellendus. one two three the fourth five six seven eight nine ten eleven twelve thirteen fourteen fifteen sixteen')
-	});
-	</script>
+	<script type="text/javascript" src="/node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="/node_modules/ilorem/dist/ilorem.js"></script>
+	<script type="text/javascript" src="/semantic/dist/semantic.min.js"></script>
 </body>
-
 </html>
