--- a/js/_tasks/product_filters/product_filters.html
+++ b/js/_tasks/product_filters/product_filters.html
@@ -12,6 +12,14 @@
       <label><input type="checkbox" name="Длинна[]" value="1.3">1.3</label>
       <label><input type="checkbox" name="Длинна[]" value="1.4">1.4</label>
     </div>
+    <div data-filter="Аудио" data-filter_type="checkbox">
+      <label><input type="checkbox" name="Аудио[]" value="AC3">AC3</label>
+      <label><input type="checkbox" name="Аудио[]" value="DTS">DTS</label>
+      <label><input type="checkbox" name="Аудио[]" value="MP3">MP3</label>
+      <label><input type="checkbox" name="Аудио[]" value="AAC">AAC</label>
+      <label><input type="checkbox" name="Аудио[]" value="Ogg">Ogg</label>
+      <label><input type="checkbox" name="Аудио[]" value="WMA">WMA</label>
+    </div>
     <!-- <div data-filter="Цена" data-filter_type="interval">
       <label>от <input type="text" name="Цена[]" value=""></label>
       <label>до <input type="text" name="Цена[]" value=""></label>
@@ -51,21 +59,36 @@
     // Занчения фильтров
     window.uncached.product_filters.filter_values = {
       "Длинна": [1.1, 1.2, 1.3, 1.4],
+      "Аудио": ["AC3", "DTS", "MP3", "AAC", "Ogg", "WMA"],
       "Цена": [100, 200.5],
       "Цвет": ["красный", "зелёный", "синий"],
     }
     // Соответствия значениям
     window.uncached.product_filters.value_matches = {
-      "Длинна 1.1": [1,5,6],
-      "Длинна 1.2": [2,4],
-      "Длинна 1.3": [3],
-      "Длинна 1.4": [],
-      "Цена 100": [1,2,3],
-      "Цена 150.55": [4,5],
-      "Цена 200.5": [6],
-      "Цвет красный": [],
-      "Цвет зелёный": [2,3],
-      "Цвет синий": [1],
+      "Длинна": {
+        "1.1": [1,5,6],
+        "1.2": [2,4],
+        "1.3": [3],
+        "1.4": [],
+      },
+      "Аудио": {
+        "AC3": [1, 2, 4, 5],
+        "DTS": [2],
+        "MP3": [1, 5],
+        "AAC": [4, 5],
+        "Ogg": [6],
+        "WMA": [1],
+      },
+      "Цена": {
+        "100": [1,2,3],
+        "150.55": [4,5],
+        "200.5": [6],
+      },
+      "Цвет": {
+        "красный": [],
+        "зелёный": [2,3],
+        "синий": [1],
+      },
     }
 
   </script>
