--- a/js/_tasks/product_filters/product_filters.html
+++ b/js/_tasks/product_filters/product_filters.html
@@ -39,8 +39,8 @@
   </div>
   <script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="../../../node_modules/underscore/underscore-min.js"></script>
-  <script type="text/javascript" src="./product_filters.js"></script>
-  <script type="text/javascript" src="./filter.js"></script>
+  <script type="text/javascript" src="./temp_product_filters.min.js"></script>
+  <script type="text/javascript" src="./temp_filter.min.js"></script>
   <script type="text/javascript">
 
     /**
