--- a/js/all.html
+++ b/js/all.html
@@ -1,3 +1,12 @@
+<h2>Минификация</h2>
+<ol>
+<li>Убедиться, что стоит Node.js</li>
+<li>Поставить npm install -g uglify-js.</li>
+<li>Сжать файл my.js: uglifyjs my.js -o my.min.js</li>
+<li>Поставить npm install uglify-es -g.</li>
+<li>Сжать файл my.js: uglifyjs my.js -o my.min.js</li>
+</ol>
+
 <p><code class="copyToClipboard">debugger;</code> — метка для отладки в браузере Chrome.</p>
 <h2>Языковые конструкции</h2>
 <h3>switch case</h3>
