--- a/webpack/_tasks/hello_world2/public/about.html
+++ b/webpack/_tasks/hello_world2/public/about.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script type="text/javascript" src="webpack/temp_common.js"></script>
-  <script type="text/javascript" src="webpack/temp_about.js"></script>
+  <script type="text/javascript" src="assets/webpack/temp_common.js"></script>
+  <script type="text/javascript" src="assets/webpack/temp_about.js"></script>
 </head>
 <body>
   <script type="text/javascript">
