--- a/js/event/event.html
+++ b/js/event/event.html
@@ -45,6 +45,12 @@ https://developer.mozilla.org/ru/docs/Web/API/Event
       square.removeEventListener('click_on_red', window.click_on_red_handler)
     }
 
+
+    // Для остановки всплытия нужно вызвать метод event.stopPropagation().
+    // Если у элемента есть несколько обработчиков на одно событие, то даже при прекращении всплытия все они будут выполнены.
+    // То есть, stopPropagation препятствует продвижению события дальше, но на текущем элементе все обработчики отработают.
+    // Для того, чтобы полностью остановить обработку, современные браузеры поддерживают метод event.stopImmediatePropagation(). Он не только предотвращает всплытие, но и останавливает обработку событий на текущем элементе.
+
   </script>
 
   <div id="lovim_vse">
