--- a/css/flexbox/flexbox3.html
+++ b/css/flexbox/flexbox3.html
@@ -1,103 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<style type="text/css">
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <style type="text/css">
 
 html, body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .my-flex-container{
-	height: 100%;
-	/*line-height: 20em;*/
+  height: 100%;
+  /*line-height: 20em;*/
 
-	display: flex;
+  display: flex;
 
-	/* Ось */
-	flex-direction: row;
-	/*flex-direction: column;*/
-
-
-	/* Выравнивание вдоль оси */
-	justify-content: flex-start;
-	/*justify-content: flex-end;*/
-	/*justify-content: center;*/
-	/*justify-content: space-between;*/
-	/*justify-content: space-around;*/
+  /* Ось */
+  flex-direction: row;
+  /*flex-direction: column;*/
 
 
-	/* Выравнивание поперек оси */
-	align-items: stretch;
-	/*align-items: flex-start;*/
-	/*align-items: flex-end;*/
-	/*align-items: center;*/
-	/*align-items: baseline;*/
+  /*
+    Выравнивание вдоль оси
+    Если ось, например ось-строка, не заполнена элементами полностью, то в какую сторону смещать элементы.
+  */
+  justify-content :flex-start;
+  /*justify-content: flex-end;*/
+  /*justify-content: center;*/
+  /*justify-content: space-between;*/
+  /*justify-content: space-around;*/
 
 
-	/* Многострочность */
-	/*flex-wrap: nowrap;*/
-	flex-wrap: wrap;
+  /*
+    Выравнивание поперек оси
+    Выравнивание элементов относительно строки.
+  */
+  align-items: stretch;
+  /*align-items: flex-start;*/
+  /*align-items: flex-end;*/
+  /*align-items: center;*/
+  /*align-items: baseline;*/
 
-	/* Выравнивани многострочности вдоль оси многострочности (поперек главной оси) */
-	align-content: stretch;
-	align-content: flex-start;
-	align-content: flex-end;
-	align-content: center;
-	align-content: space-between;
-	align-content: space-around;
+
+  /* Многострочность */
+  /*flex-wrap: nowrap;*/
+  flex-wrap: wrap;
+
+  /*
+    Выравнивани многострочности вдоль оси многострочности
+    Если высота всех строк меньше или больше чем высота контейнера,
+    то сами строки можно выровнять относительно контейнера.
+  */
+  align-content: stretch;
+  align-content: flex-start;
+  align-content: flex-end;
+  align-content: center;
+  align-content: space-between;
+  align-content: space-around;
 
 }
 .my-flex-block {
-	/*background-color: tomato;*/
-	/*flex-basis: 22%;*/
+  /*background-color: tomato;*/
+  /*flex-basis: 22%;*/
 }
 .block1 {
-	/*width: 200px;*/
-	height: 200px;
-	background-color: tomato;
+  /*width: 200px;*/
+  height: 200px;
+  background-color: tomato;
 }
 .block2 {
-	/*width: 300px;*/
-	height: 100px;
-	background-color: chocolate;
+  /*width: 300px;*/
+  height: 100px;
+  background-color: chocolate;
 }
 .block3 {
-	/*width: 100px;*/
-	height: 300px;
-	background-color: salmon;
+  /*width: 100px;*/
+  height: 300px;
+  background-color: salmon;
 }
 .block4 {
-	background-color: coral;
+  background-color: coral;
 }
 .block5 {
-	background-color: lavender;
+  background-color: lavender;
 }
 
-	</style>
+  </style>
 </head>
 <body>
-	<div class="my-flex-container">
-		<div class="my-flex-block block1">.block1 1</div>
-		<div class="my-flex-block block2">.block2 1</div>
-		<div class="my-flex-block block3">.block3 1</div>
-		<div class="my-flex-block block4">.block4 1</div>
-		<div class="my-flex-block block5">.block5 1</div>
+  <div class="my-flex-container">
+    <div class="my-flex-block block1">.block1 1</div>
+    <div class="my-flex-block block2">.block2 1</div>
+    <div class="my-flex-block block3">.block3 1</div>
+    <div class="my-flex-block block4">.block4 1</div>
+    <div class="my-flex-block block5">.block5 1</div>
 
-		<div class="my-flex-block block1">.block1 2</div>
-		<div class="my-flex-block block2">.block2 2</div>
-		<div class="my-flex-block block3">.block3 2</div>
-		<div class="my-flex-block block4">.block4 2</div>
-		<div class="my-flex-block block5">.block5 2</div>
+    <div class="my-flex-block block1">.block1 2</div>
+    <div class="my-flex-block block2">.block2 2</div>
+    <div class="my-flex-block block3">.block3 2</div>
+    <div class="my-flex-block block4">.block4 2</div>
+    <div class="my-flex-block block5">.block5 2</div>
 
-		<div class="my-flex-block block1">.block1 3</div>
-		<div class="my-flex-block block2">.block2 3</div>
-		<div class="my-flex-block block3">.block3 3</div>
-		<div class="my-flex-block block4">.block4 3</div>
-		<div class="my-flex-block block5">.block5 3</div>
-	</div>
+    <div class="my-flex-block block1">.block1 3</div>
+    <div class="my-flex-block block2">.block2 3</div>
+    <div class="my-flex-block block3">.block3 3</div>
+    <div class="my-flex-block block4">.block4 3</div>
+    <div class="my-flex-block block5">.block5 3</div>
+  </div>
 </body>
 </html>
