--- a/sass/_task/market_lorem/grid.html
+++ b/sass/_task/market_lorem/grid.html
@@ -2,55 +2,283 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <title>grid</title>
+  <style type="text/css">
+
+    html {
+      background-color: gray;
+    }
+    body {
+      background-color: white;
+    }
+
+  </style>
   <link rel="stylesheet" type="text/css" href="sass/temp_style.css">
 </head>
 <body>
-  <h2>1</h2>
+  <h1>Grid</h1>
+
+  <h2>1/2</h2>
   <div class="grid row">
-    <div class="col-6">1/2 <span include-lorem="1"></span></div>
-    <div class="col-6">1/2 <span include-lorem="1"></span></div>
+    <div class="col-6">1/2 <span ilorem></span></div>
+    <div class="col-6">1/2 <span ilorem></span></div>
   </div>
-  <h2>Все колонки и сравнение вложенности `.grid.row` и `.grid .row`</h2>
+
+  <h2>Все колонки и сравнение вложенности <code>.grid .row</code> и <code>.grid.row</code></h2>
+  <h3><code>.grid .row</code></h3>
   <div class="grid">
-    <div class="row"><div class="col-1  bg red">col-1 </div><div class="col-11 bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-2  bg red">col-2 </div><div class="col-10 bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-3  bg red">col-3 </div><div class="col-9  bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-4  bg red">col-4 </div><div class="col-8  bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-5  bg red">col-5 </div><div class="col-7  bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-6  bg red">col-6 </div><div class="col-6  bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-7  bg red">col-7 </div><div class="col-5  bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-8  bg red">col-8 </div><div class="col-4  bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-9  bg red">col-9 </div><div class="col-3  bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-10 bg red">col-10</div><div class="col-2  bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-11 bg red">col-11</div><div class="col-1  bg green" include-lorem="10"></div></div>
-    <div class="row"><div class="col-12 bg red">col-12</div><div include-lorem="10"></div></div>
+    <div class="row"><div class="col-1  bg red">col-1 </div><div class="col-11 bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-2  bg red">col-2 </div><div class="col-10 bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-3  bg red">col-3 </div><div class="col-9  bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-4  bg red">col-4 </div><div class="col-8  bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-5  bg red">col-5 </div><div class="col-7  bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-6  bg red">col-6 </div><div class="col-6  bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-7  bg red">col-7 </div><div class="col-5  bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-8  bg red">col-8 </div><div class="col-4  bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-9  bg red">col-9 </div><div class="col-3  bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-10 bg red">col-10</div><div class="col-2  bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-11 bg red">col-11</div><div class="col-1  bg green" ilorem="10"></div></div>
+    <div class="row"><div class="col-12 bg red">col-12</div><div ilorem="10"></div></div>
   </div>
-  <div class="grid row"><div class="col-1  bg red">col-1 </div><div class="col-11 bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-2  bg red">col-2 </div><div class="col-10 bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-3  bg red">col-3 </div><div class="col-9  bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-4  bg red">col-4 </div><div class="col-8  bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-5  bg red">col-5 </div><div class="col-7  bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-6  bg red">col-6 </div><div class="col-6  bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-7  bg red">col-7 </div><div class="col-5  bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-8  bg red">col-8 </div><div class="col-4  bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-9  bg red">col-9 </div><div class="col-3  bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-10 bg red">col-10</div><div class="col-2  bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-11 bg red">col-11</div><div class="col-1  bg green" include-lorem="10"></div></div>
-  <div class="grid row"><div class="col-12 bg red">col-12</div><div include-lorem="10"></div></div>
+  <h3><code>.grid.row</code></h3>
+  <div class="grid row"><div class="col-1  bg red">col-1 </div><div class="col-11 bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-2  bg red">col-2 </div><div class="col-10 bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-3  bg red">col-3 </div><div class="col-9  bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-4  bg red">col-4 </div><div class="col-8  bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-5  bg red">col-5 </div><div class="col-7  bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-6  bg red">col-6 </div><div class="col-6  bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-7  bg red">col-7 </div><div class="col-5  bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-8  bg red">col-8 </div><div class="col-4  bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-9  bg red">col-9 </div><div class="col-3  bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-10 bg red">col-10</div><div class="col-2  bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-11 bg red">col-11</div><div class="col-1  bg green" ilorem="10"></div></div>
+  <div class="grid row"><div class="col-12 bg red">col-12</div><div ilorem="10"></div></div>
+
   <h2>С отступом</h2>
+  <h3><code>.wrap.padded</code></h3>
+  <div class="grid">
+    <div class="row">
+      <div class="col-3">
+        <div class="wrap padded bg red">
+          <p ilorem></p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="wrap padded bg green">
+          <p ilorem></p>
+        </div>
+      </div>
+      <div class="col-5">
+        <div class="wrap padded bg blue">
+          <p ilorem></p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="grid row">
     <div class="col-3">
       <div class="wrap padded bg red">
-        <p include-lorem="10"></p>
+        <p ilorem></p>
       </div>
     </div>
-    <div class="col-9">
+    <div class="col-4">
       <div class="wrap padded bg green">
-        <p include-lorem="100"></p>
+        <p ilorem></p>
+      </div>
+    </div>
+    <div class="col-5">
+      <div class="wrap padded bg blue">
+        <p ilorem></p>
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="/theme/yarn/ilorem/dist/ilorem.js"></script>
+  <h3><code>.wrap.padded.cell</code></h3>
+  <div class="grid">
+    <div class="row">
+      <div class="col-3">
+        <div class="wrap padded cell bg red">
+          <p ilorem="10"></p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="wrap padded cell bg green">
+          <p ilorem></p>
+        </div>
+      </div>
+      <div class="col-5">
+        <div class="wrap padded cell bg blue">
+          <p ilorem></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="grid row">
+    <div class="col-3">
+      <div class="wrap padded cell bg red">
+        <p ilorem="10"></p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="wrap padded cell bg green">
+        <p ilorem></p>
+      </div>
+    </div>
+    <div class="col-5">
+      <div class="wrap padded cell bg blue">
+        <p ilorem></p>
+      </div>
+    </div>
+  </div>
+  <h3><code>.wrap.padded.shred</code></h3>
+  <div class="grid">
+    <div class="row">
+      <div class="col-3">
+        <div class="wrap padded shred bg red">
+          <p ilorem="10"></p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="wrap padded shred bg green">
+          <p ilorem></p>
+        </div>
+      </div>
+      <div class="col-5">
+        <div class="wrap padded shred bg blue">
+          <p ilorem></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="grid row">
+    <div class="col-3">
+      <div class="wrap padded shred bg red">
+        <p ilorem="10"></p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="wrap padded shred bg green">
+        <p ilorem></p>
+      </div>
+    </div>
+    <div class="col-5">
+      <div class="wrap padded shred bg blue">
+        <p ilorem></p>
+      </div>
+    </div>
+  </div>
+  <h3><code>.wrap.marged</code></h3>
+  <div class="grid">
+    <div class="row">
+      <div class="col-3">
+        <div class="wrap marged bg red">
+          <p ilorem></p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="wrap marged bg green">
+          <p ilorem></p>
+        </div>
+      </div>
+      <div class="col-5">
+        <div class="wrap marged bg blue">
+          <p ilorem></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="grid row">
+    <div class="col-3">
+      <div class="wrap marged bg red">
+        <p ilorem></p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="wrap marged bg green">
+        <p ilorem></p>
+      </div>
+    </div>
+    <div class="col-5">
+      <div class="wrap marged bg blue">
+        <p ilorem></p>
+      </div>
+    </div>
+  </div>
+  <h3><code>.wrap.marged.cell</code></h3>
+  <div class="grid">
+    <div class="row">
+      <div class="col-3">
+        <div class="wrap marged cell bg red">
+          <p ilorem="10"></p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="wrap marged cell bg green">
+          <p ilorem></p>
+        </div>
+      </div>
+      <div class="col-5">
+        <div class="wrap marged cell bg blue">
+          <p ilorem></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="grid row">
+    <div class="col-3">
+      <div class="wrap marged cell bg red">
+        <p ilorem="10"></p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="wrap marged cell bg green">
+        <p ilorem></p>
+      </div>
+    </div>
+    <div class="col-5">
+      <div class="wrap marged cell bg blue">
+        <p ilorem></p>
+      </div>
+    </div>
+  </div>
+  <h3><code>.wrap.marged.shred</code></h3>
+  <div class="grid">
+    <div class="row">
+      <div class="col-3">
+        <div class="wrap marged shred bg red">
+          <p ilorem="10"></p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="wrap marged shred bg green">
+          <p ilorem></p>
+        </div>
+      </div>
+      <div class="col-5">
+        <div class="wrap marged shred bg blue">
+          <p ilorem></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="grid row">
+    <div class="col-3">
+      <div class="wrap marged shred bg red">
+        <p ilorem="10"></p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="wrap marged shred bg green">
+        <p ilorem></p>
+      </div>
+    </div>
+    <div class="col-5">
+      <div class="wrap marged shred bg blue">
+        <p ilorem></p>
+      </div>
+    </div>
+  </div>
+
+  <script type="text/javascript" src="/node_modules/ilorem/dist/ilorem.js"></script>
   <script type="text/javascript">
     ILorem();
   </script>
