--- a/sass/_task/market_lorem/grid.html
+++ b/sass/_task/market_lorem/grid.html
@@ -59,17 +59,17 @@
   <div class="grid">
     <div class="row">
       <div class="col-3">
-        <div class="wrap padded bg red">
+        <div class="wrap padded bg contended red">
           <p ilorem></p>
         </div>
       </div>
       <div class="col-4">
-        <div class="wrap padded bg green">
+        <div class="wrap padded bg contended green">
           <p ilorem></p>
         </div>
       </div>
       <div class="col-5">
-        <div class="wrap padded bg blue">
+        <div class="wrap padded bg contended blue">
           <p ilorem></p>
         </div>
       </div>
@@ -77,17 +77,17 @@
   </div>
   <div class="grid row">
     <div class="col-3">
-      <div class="wrap padded bg red">
+      <div class="wrap padded bg contended red">
         <p ilorem></p>
       </div>
     </div>
     <div class="col-4">
-      <div class="wrap padded bg green">
+      <div class="wrap padded bg contended green">
         <p ilorem></p>
       </div>
     </div>
     <div class="col-5">
-      <div class="wrap padded bg blue">
+      <div class="wrap padded bg contended blue">
         <p ilorem></p>
       </div>
     </div>
@@ -96,17 +96,17 @@
   <div class="grid">
     <div class="row">
       <div class="col-3">
-        <div class="wrap padded cell bg red">
+        <div class="wrap padded cell bg contended red">
           <p ilorem="10"></p>
         </div>
       </div>
       <div class="col-4">
-        <div class="wrap padded cell bg green">
+        <div class="wrap padded cell bg contended green">
           <p ilorem></p>
         </div>
       </div>
       <div class="col-5">
-        <div class="wrap padded cell bg blue">
+        <div class="wrap padded cell bg contended blue">
           <p ilorem></p>
         </div>
       </div>
@@ -114,17 +114,17 @@
   </div>
   <div class="grid row">
     <div class="col-3">
-      <div class="wrap padded cell bg red">
+      <div class="wrap padded cell bg contended red">
         <p ilorem="10"></p>
       </div>
     </div>
     <div class="col-4">
-      <div class="wrap padded cell bg green">
+      <div class="wrap padded cell bg contended green">
         <p ilorem></p>
       </div>
     </div>
     <div class="col-5">
-      <div class="wrap padded cell bg blue">
+      <div class="wrap padded cell bg contended blue">
         <p ilorem></p>
       </div>
     </div>
@@ -133,17 +133,17 @@
   <div class="grid">
     <div class="row">
       <div class="col-3">
-        <div class="wrap padded shred bg red">
+        <div class="wrap padded shred bg contended red">
           <p ilorem="10"></p>
         </div>
       </div>
       <div class="col-4">
-        <div class="wrap padded shred bg green">
+        <div class="wrap padded shred bg contended green">
           <p ilorem></p>
         </div>
       </div>
       <div class="col-5">
-        <div class="wrap padded shred bg blue">
+        <div class="wrap padded shred bg contended blue">
           <p ilorem></p>
         </div>
       </div>
@@ -151,17 +151,17 @@
   </div>
   <div class="grid row">
     <div class="col-3">
-      <div class="wrap padded shred bg red">
+      <div class="wrap padded shred bg contended red">
         <p ilorem="10"></p>
       </div>
     </div>
     <div class="col-4">
-      <div class="wrap padded shred bg green">
+      <div class="wrap padded shred bg contended green">
         <p ilorem></p>
       </div>
     </div>
     <div class="col-5">
-      <div class="wrap padded shred bg blue">
+      <div class="wrap padded shred bg contended blue">
         <p ilorem></p>
       </div>
     </div>
@@ -276,6 +276,55 @@
         <p ilorem></p>
       </div>
     </div>
+  </div>
+  <h2>Horizontal wrap</h2>
+  <div class="grid row">
+    <div class="col-7"><div class="wrap marged bg green" ilorem></div></div>
+    <div class="col-5"><div class="wrap marged bg green" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-5"><div class="wrap marged bg blue horizontal" ilorem></div></div>
+    <div class="col-7"><div class="wrap marged bg blue horizontal" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-7"><div class="wrap marged bg blue horizontal" ilorem></div></div>
+    <div class="col-5"><div class="wrap marged bg blue horizontal" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-5"><div class="wrap marged bg red" ilorem></div></div>
+    <div class="col-7"><div class="wrap marged bg red" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-7"><div class="wrap marged cell bg green" ilorem></div></div>
+    <div class="col-5"><div class="wrap marged cell bg green" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-5"><div class="wrap marged cell bg blue horizontal" ilorem></div></div>
+    <div class="col-7"><div class="wrap marged cell bg blue horizontal" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-7"><div class="wrap marged cell bg blue horizontal" ilorem></div></div>
+    <div class="col-5"><div class="wrap marged cell bg blue horizontal" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-5"><div class="wrap marged cell bg red" ilorem></div></div>
+    <div class="col-7"><div class="wrap marged cell bg red" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-7"><div class="wrap marged shred bg green" ilorem></div></div>
+    <div class="col-5"><div class="wrap marged shred bg green" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-5"><div class="wrap marged shred bg blue horizontal" ilorem></div></div>
+    <div class="col-7"><div class="wrap marged shred bg blue horizontal" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-7"><div class="wrap marged shred bg blue horizontal" ilorem></div></div>
+    <div class="col-5"><div class="wrap marged shred bg blue horizontal" ilorem></div></div>
+  </div>
+  <div class="grid row">
+    <div class="col-5"><div class="wrap marged shred bg red" ilorem></div></div>
+    <div class="col-7"><div class="wrap marged shred bg red" ilorem></div></div>
   </div>
 
   <script type="text/javascript" src="/node_modules/ilorem/dist/ilorem.js"></script>
