--- a/js/oop/oop.html
+++ b/js/oop/oop.html
@@ -12,6 +12,8 @@
 
 			"use strict"
 
+			// + прочитать что такое prototype
+
 			window.aaa = {}
 			function Cl() {
 				console.log('this in Cl(): ', this) // this - инстанса
