--- a/nginx/all.html
+++ b/nginx/all.html
@@ -4,6 +4,7 @@
 <p><code class="copyToClipboard">sudo service nginx stop</code></p>
 <p><code class="copyToClipboard">sudo service nginx start</code></p>
 <p><code class="copyToClipboard">sudo service nginx restart</code></p>
+<p><code class="copyToClipboard">sudo service nginx reload</code></p>
 <p><code class="copyToClipboard">service nginx status</code></p>
 
 <h2>Настойки</h2>
